remove a return in SetZoomFactorForDeviceScaleFactor

The return in SetZoomFactorForDeviceScaleFactor breaks the fix in
crrev.com/c/690415: updates zoom-for-dsf navigation.
Because WebView DSF wasn't changed when navigation, the early return
is preventing propagating the zoom to the newly navigated frames.

Bug: 844463
Change-Id: I719116218e2e6d809700624cb5bcf2ade7df2c90
Reviewed-on: https://chromium-review.googlesource.com/1065234
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Ella Ge <eirage@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563229}
Former-commit-id: 6d06c10d5f0f8a4b8b69d8113d24ab0ff07be1bf