content/public/test/render_view_test.h
@@ -93,6 +93,13 @@ class RenderViewTest : public testing::Test {
   bool ExecuteJavaScriptAndReturnIntValue(const base::string16& script,
                                           int* result);
 
+  // Executes the given JavaScript and sets the number value it evaluates to in
+  // |result|.
+  // Returns true if the JavaScript was evaluated correctly to an number value,
+  // false otherwise.
+  bool ExecuteJavaScriptAndReturnNumberValue(const base::string16& script,
+                                             double* result);
+
   // Loads |html| into the main frame as a data: URL and blocks until the
   // navigation is committed.
   void LoadHTML(const char* html);
